Tue Jul 10 13:21:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Session_Container.cpp:
          Fixed debug statements, thanks to Friedhelm Wolf
          <friedhelm dot wolf at googlemail dot com> for pointing this out

Tue Jul 10 03:53:18 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * CCF/CCF/CodeGenerationKit/IndentationBuffer.hpp:

          Fixed fuzz warnings. Zap the usage of exception specification.

Mon Jul  9 11:23:12 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/checking_visitor.cpp:

          Added missing newline to the end of the file.

Mon Jul  9 07:26:20 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:

          Updated project to include new source and header files.

Mon Jul  9 02:11:22 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * CCF/CCF/CodeGenerationKit/IndentationCxx.hpp:
        * CCF/CCF/CodeGenerationKit/IndentationIDL.hpp:
        * CCF/CCF/CodeGenerationKit/IndentationImplanter.hpp:
        * CCF/CCF/CodeGenerationKit/IndentationXML.hpp:
        * CCF/CCF/CompilerElements/Context.hpp:
        * CCF/CCF/CompilerElements/Preprocessor.cpp:
        * CCF/CCF/CompilerElements/PreprocessorToken.cpp:
        * CCF/CCF/CompilerElements/PreprocessorToken.hpp:
        * CCF/CCF/IDL2/LexicalAnalyzer.hpp:
        * CCF/CCF/IDL2/LexicalAnalyzer.cpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Elements.cpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Elements.hpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Elements.tpp:
        * CCF/CCF/IDL2/SemanticGraph/Name.cpp:
        * CCF/CCF/IDL2/SemanticGraph/Name.hpp:
        * CCF/Example/ComponentDeploymentDescriptor/SyntaxTree.hpp:
        * CCF/Example/ComponentDeploymentDescriptor/Traversal.hpp:
        * DAnCE/Utils/Plan_Handler.h:
        * DAnCE/Utils/Plan_Handler.cpp:
        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.h: